--- a/package.json
+++ b/package.json
@@ -21,42 +21,48 @@
     "sentry:sourcemaps": "sentry-cli sourcemaps inject --org lloyd-dn --project node-nestjs ./dist && sentry-cli sourcemaps upload --org lloyd-dn --project node-nestjs ./dist"
   },
   "dependencies": {
-    "@nestjs/common": "^11.0.1",
-    "@nestjs/core": "^11.0.1",
+    "@nestjs/common": "11.0.19",
+    "@nestjs/config": "4.0.2",
+    "@nestjs/core": "11.0.19",
+    "@nestjs/jwt": "11.0.0",
     "@nestjs/mapped-types": "2.1.0",
-    "@nestjs/platform-express": "^11.0.1",
-    "@sentry/cli": "^2.43.0",
-    "@sentry/nestjs": "^9.12.0",
-    "@sentry/profiling-node": "^9.12.0",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "@nestjs/platform-express": "11.0.19",
+    "@nestjs/swagger": "11.1.2",
+    "@prisma/client": "6.6.0",
+    "@sentry/cli": "2.43.0",
+    "@sentry/nestjs": "9.12.0",
+    "@sentry/profiling-node": "9.12.0",
+    "reflect-metadata": "0.2.2",
+    "rxjs": "7.8.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.18.0",
+    "@eslint/eslintrc": "3.2.0",
+    "@eslint/js": "9.18.0",
     "@nestjs/cli": "11.0.6",
-    "@nestjs/schematics": "^11.0.0",
-    "@nestjs/testing": "^11.0.1",
-    "@swc/cli": "^0.6.0",
-    "@swc/core": "^1.10.7",
-    "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.7",
-    "@types/supertest": "^6.0.2",
-    "eslint": "^9.18.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.2",
-    "globals": "^16.0.0",
-    "jest": "^29.7.0",
-    "prettier": "^3.4.2",
-    "source-map-support": "^0.5.21",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
-    "ts-loader": "^9.5.2",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "@nestjs/schematics": "11.0.0",
+    "@nestjs/testing": "11.0.19",
+    "@swc/cli": "0.6.0",
+    "@swc/core": "1.10.7",
+    "@types/express": "5.0.0",
+    "@types/jest": "29.5.14",
+    "@types/node": "22.10.7",
+    "@types/supertest": "6.0.2",
+    "eslint": "8.57.1",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "globals": "16.0.0",
+    "jest": "29.7.0",
+    "prettier": "3.4.2",
+    "prisma": "6.6.0",
+    "source-map-support": "0.5.21",
+    "supertest": "7.0.0",
+    "ts-jest": "29.2.5",
+    "ts-loader": "9.5.2",
+    "ts-node": "10.9.2",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "5.7.3",
+    "typescript-eslint": "8.14.0"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -67,7 +73,7 @@
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
+      ".+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
       "**/*.(t|j)s"
