--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "@sentry/cli": "2.43.0",
     "@sentry/nestjs": "9.12.0",
     "@sentry/profiling-node": "9.12.0",
+    "bcrypt": "5.1.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.1",
-    "swagger-ui-express": "5.0.1"
+    "swagger-ui-express": "5.0.1",
+    "zod": "3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.2.0",
