--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "backend",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "version": "0.1",
+  "description": "Backend for Interactive",
+  "author": "Lloyd",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -26,6 +26,7 @@
     "@nestjs/core": "11.0.19",
     "@nestjs/jwt": "11.0.0",
     "@nestjs/mapped-types": "2.1.0",
+    "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "11.0.19",
     "@nestjs/swagger": "11.1.2",
     "@prisma/client": "6.6.0",
@@ -33,8 +34,8 @@
     "@sentry/nestjs": "9.12.0",
     "@sentry/profiling-node": "9.12.0",
     "bcrypt": "5.1.1",
-    "class-transformer": "0.5.1",
-    "class-validator": "0.14.1",
+    "passport": "0.7.0",
+    "passport-jwt": "4.0.1",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.1",
     "swagger-ui-express": "5.0.1",
@@ -48,9 +49,11 @@
     "@nestjs/testing": "11.0.19",
     "@swc/cli": "0.6.0",
     "@swc/core": "1.10.7",
+    "@types/bcrypt": "5.0.2",
     "@types/express": "5.0.0",
     "@types/jest": "29.5.14",
     "@types/node": "22.10.7",
+    "@types/passport-jwt": "4.0.1",
     "@types/supertest": "6.0.2",
     "eslint": "8.57.1",
     "eslint-config-prettier": "9.1.0",
