--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,8 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 # Sentry Config File
 .sentryclirc
+
+# Docker
+compose.yaml
+.dockerignore
+.dockerfile
