--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@sentry/cli": "2.43.0",
     "@sentry/nestjs": "9.12.0",
     "@sentry/profiling-node": "9.12.0",
+    "axios": "^1.9.0",
     "bcrypt": "5.1.1",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
